src/objects/NRG_Lease_Fund__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>API_Password__c</fullName>
        <label>API Password</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <label>API Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_REST_API_End_Point__c</fullName>
        <label>NRG REST API End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth2_Refresh_Token__c</fullName>
        <label>OAuth2 Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NRG Lease Fund</label>
</CustomObject>